Fix gutenberg issues on mobile phone

--- a/sass/base/gutenberg.scss
+++ b/sass/base/gutenberg.scss
@@ -44,6 +44,11 @@
   padding-top: 0 !important;
 }
 
+.components-editor-notices__dismissible,
+.components-notice-list {
+  top: 0 !important;
+}
+
 .components-editor-notices__dismissible .components-notice,
 .components-editor-notices__pinned .components-notice {
   margin-bottom: 0 !important;
@@ -130,12 +135,16 @@
   }
 
   .editor-post-title {
-    background-size: cover;
+    @include background-cover();
     padding: 0 !important;
     margin: 0 0 70px !important;
     height: 100vh;
     position: relative;
     max-height: 1300px;
+
+    @media (max-width: 782px) {
+      height: 680px !important;
+    }
 
     // Shade
     &::after {
@@ -191,8 +200,12 @@
     color: $color-white !important;
 
     @media (max-width: 782px) {
-      left: 0;
-      right: 0;
+      left: 0 !important;
+      right: 0 !important;
+      width: auto !important;
+      bottom: 0 !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
 
     * {
